All relative scenarios now set info in info panel

--- a/relative.html
+++ b/relative.html
@@ -167,9 +167,9 @@ a:hover, a:active {
 	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;height:345px;">
 		
 		<div id="vab-info" style="display:none;">
-			<div id="va-value">Va (red line):</div>
-			<div id="vb-value">Vb (blue line):</div>
-			<div id="vab-value">Vab (purple line):</div>
+			<div id="va-value"></div>
+			<div id="vb-value"></div>
+			<div id="vab-value"></div>
 		</div>
 		
 		<div id="closest-info" style="display:none;">
@@ -181,8 +181,15 @@ a:hover, a:active {
 		</div>
 		
 		<div id="river-info" style="display:none;">
-		
+			<div id="current-value"></div>
+			<div id="angle-value"></div>
+			<div id="landing-value"></div>
+			<div id="ij-value"></div>
 		</div>
+		
+		<div id="scale"></div>
+		
+		<div id="time"></div>
 		
 	</div>	
 	
