--- a/circular-shm.html
+++ b/circular-shm.html
@@ -70,7 +70,7 @@ a:hover, a:active {
 	<div style="position:absolute; width:165px;top:70px;">
 		
 		<!-- DROPDOWN MENU -->
-		<div>Select scenario:</div>
+		<div>Select problem type:</div>
 		<div style="height:10px;"></div>
 		
 		<select id="typeSelect" onchange="typeChange()" autocomplete="off">
