Fixing up labels

--- a/circular-shm.html
+++ b/circular-shm.html
@@ -87,13 +87,13 @@ a:hover, a:active {
 		<!-- SHOWN WHEN "HORIZONTAL CIRCLE" IS SELECTED -->
 		<div id = "horizontal-div">
 		
-			<input id="horizontal-r" type="text" placeholder="Length (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="horizontal-r" type="text" placeholder="Radius > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="horizontal-m" type="text" placeholder="Mass (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="horizontal-m" type="text" placeholder="Mass >0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="horizontal-vr" type="text" placeholder="Angular velocity (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="horizontal-vr" type="text" placeholder="Angular velocity ω > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 
 			
@@ -105,10 +105,10 @@ a:hover, a:active {
 		<!-- SHOWN WHEN "BASIC SHM" IS SELECTED -->
 		<div id = "basic-div" style="display:none;">
 			
-			<input id="basic-vr" type="text" placeholder="Angular velocity ω (>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="basic-vr" type="text" placeholder="Angular velocity ω > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="basic-a" type="text" placeholder="Amplitude A (>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="basic-a" type="text" placeholder="Amplitude A > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
