--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 	Tested to work with the following browsers:
 	<ul>
 	<li>FireFox latest version</li>
-	<li>Chrome latest version</li>
-	<li>Internet Explorer 11 and later</li>
+	<li>Chrome latest version and also Android version</li>
+	<li>Safari on iOS</li>
+	<li>Internet Explorer 8 and later</li>
 	</ul>
 	Please click "Allow blocked content" to allow JavaScript if using Internet Explorer
 	</br>
