--- a/linearmotion.html
+++ b/linearmotion.html
@@ -87,13 +87,13 @@ a:hover, a:active {
 			
 		<!-- SHOWN WHEN "REACH GIVEN SPEED" IS SELECTED -->
 		<div id = "reach">
-			<input id="reach-u1" type="text" placeholder="Initial speed u (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="reach-u1" type="text" placeholder="Initial speed u ≥ 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="reach-a1" type="text" placeholder="Acceleration a (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="reach-a1" type="text" placeholder="Acceleration a ≥ 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="reach-v1" type="text" placeholder="Final velocity v (> u ≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="reach-v1" type="text" placeholder="Final velocity v > u" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
@@ -102,10 +102,10 @@ a:hover, a:active {
 		
 		<!-- SHOW WHEN "SLOW TO ZERO" IS SELECTED -->
 		<div id = "slow" style="display:none;">
-			<input id="slow-u1" type="text" placeholder="Initial speed u (> 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="slow-u1" type="text" placeholder="Initial speed u > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="slow-a1" type="text" placeholder="Acceleration a (< 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="slow-a1" type="text" placeholder="Acceleration a < 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 
 			<hr style = "float:left; width:85%;">
@@ -117,17 +117,17 @@ a:hover, a:active {
 		
 			<!-- FIRST OBJECT -->
 			
-			<input id="catch-a1" type="text" placeholder="Acceleration a1 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="catch-a1" type="text" placeholder="Acceleration a1 > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
 			
 			<!-- SECOND OBJECT -->
-			<input id="catch-u2" type="text" placeholder="Initial speed u2 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="catch-u2" type="text" placeholder="Initial speed u2 ≥ 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="catch-a2" type="text" placeholder="Acceleration a2 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="catch-a2" type="text" placeholder="Acceleration a2 ≥ 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
 			
-			<input id="delay" type="text" placeholder="Delay x (> 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="delay" type="text" placeholder="Delay x > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
