--- a/relative.html
+++ b/relative.html
@@ -107,18 +107,18 @@ a:hover, a:active {
 		
 		<!-- SHOW WHEN "CLOSEST DISTANCE" IS SELECTED -->
 		<div id = "closestdiv" style="display:none;">
-			<input id="closest-ai" type="text" placeholder="A's i velocity (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="closest-ai" type="text" placeholder="A's i velocity > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="closest-as" type="text" placeholder="A's distance west (>0)" style = "float:left;width:87.5%; height:auto;" autocomplete="off"/> </br>
+			<input id="closest-as" type="text" placeholder="A's distance west > 0" style = "float:left;width:87.5%; height:auto;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<div style="height:5px;"></div>
 			
-			<input id="closest-bj" type="text" placeholder="B's j velocity (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="closest-bj" type="text" placeholder="B's j velocity > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="closest-bs" type="text" placeholder="B's distance south (>0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+			<input id="closest-bs" type="text" placeholder="B's distance south > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 
@@ -129,16 +129,16 @@ a:hover, a:active {
 		<!-- SHOWN WHEN "RIVER" IS SELECTED -->
 		<div id = "riverdiv" style="display:none;">
 			
-			<input id="river-vp" type="text" placeholder="Person's speed (>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="river-vp" type="text" placeholder="Person's speed >0 " style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="river-angle" type="text" placeholder="Starting angle  (90≥Θ>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="river-angle" type="text" placeholder="Angle 90 ≥ Θ > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="river-vr" type="text" placeholder="Speed of the current (>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="river-vr" type="text" placeholder="Speed of the current > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="river-w" type="text" placeholder="Width of the river (>0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
+			<input id="river-w" type="text" placeholder="Width of the river > 0" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
