--- a/projectiles.html
+++ b/projectiles.html
@@ -73,11 +73,11 @@ a:hover, a:active {
 	<div style="position:absolute; width:165px; top:70px;">
 			
 		<!-- INITIAL SPEED FIELD -->
-		<input id="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+		<input id="u" type="text" placeholder="Initial speed u > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<!-- PROJECTILE ANGLE FIELD -->
-		<input id="angle" type="text" placeholder="Projectile angle α" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+		<input id="angle" type="text" placeholder="Angle 90 ≥ α ≥ 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<hr style = "float:left; width:85%;">
@@ -89,7 +89,7 @@ a:hover, a:active {
 		<div style="height:5px;"></div>
 			
 		<!-- INCLINE ANGLE FIELD -->
-		<input id="inclineAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+		<input id="inclineAngle" type="text" placeholder="Incline angle 90 > Θ > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<div style="height:5px;"></div>
@@ -102,7 +102,7 @@ a:hover, a:active {
 		<div style="height:5px;"></div>
 			
 		<!-- START HEIGHT FIELD -->
-		<input id="startHeight" type="text" placeholder="Starting height" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
+		<input id="startHeight" type="text" placeholder="Starting height > 0" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<hr style = "float:left; width:85%;">
