Fixes to navbar scaling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<div id="navbar">
 		<ul>
-		<li><a style="color:black; background-color:#A0A0A0" href="index.html">Index</a></li>
+		<li><a style="color: black; background-color:#A0A0A0" href="index.html">Index</a></li>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
@@ -29,7 +29,7 @@
 	</div>
 	
 	<div id="navselect">
-		<select id="navselectmenu" onchange="location = this.options[this.selectedIndex].value;" style="position:relative;height:35px;top:10px; left:5px;width:98%;">
+		<select id="navselectmenu" onchange="location = this.options[this.selectedIndex].value;">
 			<option value="index.html">Index</option>
 			<option value="projectiles.html">Projectiles</option>
 			<option value="linearmotion.html">Linear Motion</option>
