--- a/relative.html
+++ b/relative.html
@@ -30,7 +30,7 @@
 	</div>
 	
 	<div id="navselect">
-		<select id="navselectmenu" onchange="location = this.options[this.selectedIndex].value;" style="position:relative;height:35px;top:10px; left:5px;width:98%;">
+		<select id="navselectmenu" onchange="location = this.options[this.selectedIndex].value;">
 			<option value="relative.html">Relative Velocity</option>
 			<option value="linearmotion.html">Linear Motion</option>
 			<option value="projectiles.html">Projectiles</option>
